# blue-pill-quickstart

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
